# Virtual_Serial_Port_Communication

Qt_Serio/: Qt_Serio.pro  Qt_Serio.pro.user.44f26f4.21  adapter.cpp  adapter.h  config.txt  main.cpp  mainwindow.cpp  mainwindow.h  myserver.cpp  myserver.h  timeoutserial.cpp
Server/: CMakeCache.txt  CMakeLists.txt  CheckData.cpp  CheckData.h  Makefile  MethodDecider.cpp  MethodDecider.h  README.md  TLV.cpp  TagDecider.cpp  TagDecider.h  TimeoutSerial.cpp  _gitignore  adapter.cpp  adapter.h  cmake_install.cmake  config.txt  helpArdic.h  httpClientHandler.cpp  httpClientHandler.hpp  iniconfig.hpp  main.cpp  package.h  serial.h  serio
serio_client/: mainwindow.ui  mainwindow.ui.autosave  serio_client.pro
test_app/: CMakeCache.txt  CMakeLists.txt  Data.txt  GetData.cpp  GetData.h  Makefile  MethodDecider.cpp  MethodDecider.h  TLV.cpp  TLV.h  TimeoutSerial.cpp  cmake_install.cmake  config.txt  iniconfig.cpp  main.cpp  test_app
